--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-    <string name="app_name">TemperatureStoreApp</string>
+    <string name="app_name">Temperature Store</string>
+    <string name="latest_temp" formatted="false">Latest Temperature: %.1f C</string>
+    <string name="latest_humidity" formatted="false">Latest Humidity: %d %%</string>
+    <string name="top_temp" formatted="false">Highest Temperature: %.1f C</string>
+    <string name="top_humidity" formatted="false">Highest Humidity: %d %%</string>
 </resources>
